# alexpdp7

./: .gitignore  .gitmodules  ALTERNATE_PROVIDERS.org  Dockerfile.proxy  FUENTES.md  IDEAS  IDEAS.org  INTERESTING_ARTICLES.org  INTERESTING_PROJECTS.org  PERSONAL_INFRA.md  README  README.md  TOOLS.org  build.py  fix.py  from_old_blog.py  from_old_blog_slugs.py  post.yml  verified  wishlist.org
blog/: README.md  build.rs  build.sh  k8s.yaml  post-receive  pyproject.toml  style.css  test_html_rendering.py
blog/blog/: __init__.py  __main__.py  blog_pages.py  html.py  meta.py  pretty.py
blog/content/: gemini.gmi  interesting-projects.gmi  interesting-projects.py  redirections.txt
blog/content/2003/11/: comics-irregulares.gmi  como-en-el-dr-slump.gmi  cumples.gmi  de-la-imdb.gmi  fantastico-sitges.gmi  impulsos-irresistibles.gmi  kill-bill.gmi  koallum.gmi  marionetas.gmi  pelis-chinas-raras.gmi  pelis.gmi  por-poner-algo.gmi  ratones-fibraos.gmi  seres.gmi  sonria-bond.gmi  toda-saga-tiene-su-inicio.gmi  un-domingo-cualquiera.gmi  you-re-late.gmi
blog/content/2003/12/: articulos-resalaos.gmi  celuloide-celulosa.gmi  curiosos-anuncios.gmi  de-trepamuros-y-hombres.gmi  disciplina-inglesa.gmi  el-ano-se-acaba-una-vez-mas.gmi  el-retorno-del-rey.gmi  enhorabuena-a-los-premiados.gmi  entelonado.gmi  gesto.gmi  humor-sofisticado.gmi  macroeconomia.gmi  medianas-de-beber.gmi  no-es-precisamente-una-peli-de-audrey.gmi  parco-en-palabras.gmi  parejas-relumbronas.gmi  pues-mi-nemesis-es-el-word.gmi  pulse.gmi  que-critiquen-ellos.gmi  queso-gran-capitan-t-kirk.gmi  servicio-al-cliente.gmi  the-2-stands-for-duality.gmi  vercetti-tommy-vercetti.gmi
blog/content/2004/01/: alianzas-chungas.gmi  alta-bajotecnologia.gmi  cute-dog.gmi  dosymediodimensional.gmi  dudas-de-lenguas.gmi  el-formol-lo-pone-usted.gmi  en-resumidas-cuentas.gmi  genios-locos.gmi  la-lluvia-en-sev-illa-es-una-maravilla.gmi  marketing-de-nivel.gmi  monacal.gmi  muchos-pantallazos-azules.gmi  normalizando.gmi  pero-nunca-aprenderan-a-sumar.gmi  preservaciones.gmi  purificar.gmi  sota-caballo-y-rey.gmi  te-da-aalas.gmi  very-naish.gmi  videojuegos.gmi  yo-me-lo-imaginaba-mas-barato.gmi  ziggy.gmi
blog/content/2004/02/: no-me-mire-con-esos-ojos.gmi  pechos-televisivos.gmi  sobre-ruedas.gmi
blog/content/2004/03/: estoy-pachucho.gmi  matamata.gmi  momento-retro.gmi  no-no-si-yo-estoy-contando.gmi  the-news-today.gmi
blog/content/2004/04/: autopromocion.gmi  bowie-el-modenno.gmi  como-fabricar-una-steadycam.gmi  la-moto-de-akira.gmi  mods.gmi  para-voyeurs.gmi  parece-que-mi-mini-blog.gmi  porque-si-no-luego-se-me-olvida.gmi  smileys-orientales.gmi  ya-no-estoy-pachuco.gmi
blog/content/2004/05/: a-capella-japonesa.gmi  buscando.gmi  casualidades-viricas.gmi  chistes-de-matematicas.gmi  comida.gmi  el-ik.gmi  encyclopedia-mythica.gmi  flash-a-prueba-de-escarabajos.gmi  lemmings-en-dhtml.gmi  para-abonados-a-la-imdb.gmi  por-casualidad.gmi  seran-los-de-microsoft.gmi  trailers.gmi  troya.gmi
blog/content/2004/06/: commodore-lives.gmi  criticas.gmi  (+4 more)
blog/content/laspelis/: 1.gmi  1000.mail  1001.gmi  1002.gmi  1002.mail  1003.mail  1005.gmi  1005.mail  1006.mail  1012.gmi  1012.mail  1013.mail  1014.mail  1016.mail  1017.gmi  102.mail  1021.gmi  1022.gmi  1025.mail  1029.gmi  103.mail  1032.mail  1037.mail  1039.mail  104.mail  1041.gmi  1046.mail  1047.mail  1048.gmi  1050.gmi  1050.mail  1051.gmi  1052.gmi  1055.mail  1056.gmi  1057.gmi  1058.gmi  1061.gmi  1062.mail  1063.mail  (+517 more)
blog/content/notas/: comprar-bajo-en-sodio.gmi  index.gmi
blog/content/notes/: greek-task-list.gmi  index.gmi  interesting-articles.gmi
blog/src/blog/: __init__.py  __main__.py  blog_pages.py  gemtext.py  html.py  meta.py  page.py
blog_experiment/: NOTES.md  blog.py  build.rs  content  k8s.yaml  pyproject.toml  static  test_html_rendering.py
blog_experiment/blog/: __init__.py  __main__.py  blog_pages.py  gemtext.py  html.py  meta.py
blog_experiment/static/laspelis/: index.gmi
blog_v2/: README.md  post-receive  pyproject.toml
blog_v2/src/blog/: __init__.py  gemtext.py
gemini2rss/: .gitignore  gemini2rss.py  pyproject.toml
personal_infra/: .gitignore  HACKING.md  README.md  ansible.cfg  ansible_facts.py  clickhouse_maintenance.md  deploy_ragent_from_github  hack_dnf_problems.py  inventory_os.py  podman.md  pseudo_resource_exporter.py  pyproject.toml  requirements.loose  requirements.txt  setup_ipa_replicas.md  setup_venv  up.py
personal_infra/containers/bitlbee-telegram/: Containerfile
personal_infra/k8s/base/: kustomization.yml
personal_infra/playbooks/: apply_puppet.yml  join_ipa.yaml  patch_rpc_svcgssd_service.yaml  pis.yaml  proxmox_create_lxc.yml  setup_blog_keys.yaml  setup_tinc_keys.yaml  setup_wireguard.yaml  site.yaml  verify_root_mail.yaml
personal_infra/puppet/site/: 00-common.pp  01-dns.pp  01-dyndns.pp  01-ipa.pp  01-tinc.pp  02-tinc-dns.pp  armitage.bcn.int.pdp7.net.pp  bitwarden.h1.int.pdp7.net.pp  case.ces.int.pdp7.net.pp  clickhouse.h1.int.pdp7.net.pp  dixie.bcn.int.pdp7.net.pp  flexisip.h1.int.pdp7.net.pp  freeswitch.h1.int.pdp7.net.pp  git.h1.int.pdp7.net.pp  grafana.h1.int.pdp7.net.pp  h1.pdp7.net.pp  h2.pdp7.net.pp  hideo.mad.int.pdp7.net.pp  ipa8.h1.int.pdp7.net.pp  ipa9.h1.int.pdp7.net.pp  ipsilon-test.h1.int.pdp7.net.pp  ipsilon.h1.int.pdp7.net.pp  julius.ces.int.pdp7.net.pp  maelcum.mad.int.pdp7.net.pp  miniflux.h1.int.pdp7.net.pp  molly.ipa.pdp7.net.pp  nagios.h1.int.pdp7.net.pp  nc1.pdp7.net.pp  nextcloud.h1.int.pdp7.net.pp  ovh1.pdp7.net.pp  pg.h1.int.pdp7.net.pp  scratchel9.h1.int.pdp7.net.pp  stb.mad.int.pdp7.net.pp  testc9.h1.int.pdp7.net.pp  vaultwarden.h1.int.pdp7.net.pp  weed.h1.int.pdp7.net.pp  ws.h1.int.pdp7.net.pp
scripts/: README.md  paperwm  pyproject.toml  ruscreen
scripts/p7s/: __init__.py  appdirs.py  bash.py  bitlbee.py  bitwarden.py  distrobox.py  emacs.py  google_meet.py  ledger.py  mbsync.py  newsboat.py  nextcloud.py  paperwm.py  ruscreen.py  senpai.py  soju.py  systemd.py  ubpkg.py  x12.py  zfs.py
scripts/p7s/mail/: __init__.py  imapfilter.py  mbsync.py
(+4451 files in other folders)
