[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
packages = [{include = "blog"}]

[tool.poetry.dependencies]
python = "^3.9"
# bicephalus = { path = "../../bicephalus", develop = true }
bicephalus = { git = "https://github.com/alexpdp7/bicephalus.git" }
htmlgenerator = "^1.2.30"
beautifulsoup4 = "^4.12.3"
feedgen = "^1.0.0"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
