[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bicephalus",
    "feedgen>=1.0.0",
    "htmlgenerator>=1.2.32",
    "lxml>=5.3.1",
]

[tool.uv]
package = true

[tool.uv.sources]
bicephalus = { git = "https://github.com/alexpdp7/bicephalus.git" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"content" = "content"
"static" = "static"
