[tool.poetry]
name = "blog-experiment"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
readme = "README.md"
packages = [{include = "blog_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
bicephalus = {path = "/home/alex/git/bicephalus", develop = true}
htmlgenerator = "^1.2.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
