[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
packages = [{include = "blog"}]

[tool.poetry.dependencies]
python = "^3.9"
bicephalus = {path = "/home/alex/git/bicephalus", develop = true}
htmlgenerator = "^1.2.28"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
