[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
requires-python = ">=3.12"
dependencies = [
    "feedgen>=1.0.0",
    "htmlgenerator>=1.2.32",
    "lxml>=6.0.2",
]

[project.scripts]
blog = "blog:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
