[tool.poetry]
name = "gemini2rss"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
feedgen = "^0.9.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
