[project]
name = "sys2"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ansible>=10.0.1",
    "jmespath>=1.0.1",
    "botocore>=1.34.122",
    "boto3>=1.34.122",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true
