[tool.poetry]
name = "p7s"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ruscreen = 'p7s.ruscreen:main'
setup-bash = 'p7s.bash:setup_bash'
setup-bitlbee = 'p7s.bitlbee:setup_bitlbee'
setup-emacs = 'p7s.emacs:setup_emacs'
setup-mbsync = 'p7s.mail:setup_mbsync'
setup-nextcloud = 'p7s.nextcloud:setup_nextcloud'
setup-imapfilter = 'p7s.mail:setup_imapfilter'
setup-soju = 'p7s.soju:setup_soju'
setup-ubpkg = 'p7s.ubpkg:setup_ubpkg'
setup-x12 = 'p7s.x12:setup_x12'
senpai = 'p7s.senpai:main'
ledger = 'p7s.ledger:main'
